--- a/app/src/main/res/layout/activity_layout2.xml
+++ b/app/src/main/res/layout/activity_layout2.xml
@@ -15,13 +15,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <SeekBar
-                android:id="@+id/seekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="4"
-                android:progress="2" />
+                android:max="5"
+                android:progress="1" />
+
+            <VideoView
+                android:id="@+id/videoView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
 
         </LinearLayout>
     </ScrollView>
